--- a/Rewards/src/main/resources/application.properties
+++ b/Rewards/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix: /WEB-INF/
+spring.mail.host=smtp.gmail.com
+spring.mail.username=codingdojotestjavafinal@gmail.com
+spring.mail.password=javafinalproject1
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
