--- a/Rewards/src/main/resources/application.properties
+++ b/Rewards/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.mail.username=codingdojotestjavafinal@gmail.com
 spring.mail.password=javafinalproject1
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
