--- a/Rewards/src/main/resources/application.properties
+++ b/Rewards/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/reward_center
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=amzn2018
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix: /WEB-INF/
@@ -9,5 +9,5 @@ spring.mail.username=codingdojotestjavafinal@gmail.com
 spring.mail.password=javafinalproject1
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
